fix: overflowbugs ... issue https://github.com/liaScript/LiaScript/issues/20

--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -608,6 +608,8 @@
         .lia-survey-matrix {
             padding: map-get($config, spacing-normal);
         }
+
+        display: inline-block;
     }
 
     .lia-survey-matrix {
@@ -646,6 +648,7 @@
       //todo add shadow with changeing colors according to dark and light...
       border-radius: 5px;
       //box-shadow: 8px 7px 0px #eee;
+      display: inline-block;
     }
 
     .lia-toolbar {
